typed-schema/tests/ui/fail/unsupported_rename_all.stderr
error: unknown rename rule `rename_all = "not-a-case"`, expected one of "lowercase", "UPPERCASE", "PascalCase", "camelCase", "snake_case", "SCREAMING_SNAKE_CASE", "kebab-case", "SCREAMING-KEBAB-CASE"
 --> tests/ui/fail/unsupported_rename_all.rs:5:22
  |
5 | #[serde(rename_all = "not-a-case")]
  |                      ^^^^^^^^^^^^

error: unsupported serde rename_all; expected lowercase, UPPERCASE, PascalCase, camelCase, snake_case, SCREAMING_SNAKE_CASE, kebab-case, or SCREAMING-KEBAB-CASE
 --> tests/ui/fail/unsupported_rename_all.rs:5:22
  |
5 | #[serde(rename_all = "not-a-case")]
  |                      ^^^^^^^^^^^^
